--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 *,
@@ -13,4 +14,9 @@ html {
   flex-flow: column wrap;
   justify-content: center;
   align-items: center;
+}
+
+.card-description {
+  height: 40px;
+  overflow: hidden;
 }
